--- a/src/main/webapp/pages/Login.xhtml
+++ b/src/main/webapp/pages/Login.xhtml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="ISO-8859-1" ?>
+<?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
@@ -10,7 +10,7 @@
         <link rel="shortcut icon" type="image/x-icon"
               href="#{request.contextPath}/resources/imagens/icone.ico" />
 
-     
+        
         <title>Login</title>
 
     </h:head>
@@ -22,7 +22,7 @@
 
                 <h:panelGrid columns="2" cellpadding="5">
 
-                    <h:outputLabel  value="Usuário:*" />
+                    <h:outputLabel  value="Usuario:*" />
 
                     <p:inputText   value="" required="true" />
 
