--- a/src/main/webapp/pages/Requisicao.xhtml
+++ b/src/main/webapp/pages/Requisicao.xhtml
@@ -129,7 +129,7 @@
 
                 </h:panelGrid>
 
-                <p:commandButton value="Adicionar" onclick="PF('dlgInsumo').show();"   update=":formItensInsumo:painelItensInsumo" >
+                <p:commandButton value="Adicionar" onclick="PF('dlgInsumo').show();"   actionListener="#{MBRequisicao.prepararAdicionar}" update=":formItensInsumo:painelItensInsumo" >
                     <p:resetInput target="FormInsumo" />
                 </p:commandButton>
                 <p:spacer/>
@@ -155,7 +155,10 @@
 
                     <p:column headerText="Ações" width="5">
 
-                        <p:commandButton icon="ui-icon-minus" />
+                        <p:commandButton icon="ui-icon-minus" actionListener="#{MBRequisicao.removeItemInsumo}" update=":formDlgNovo:tabelaItemInsumo" >
+                                <f:attribute name="ItemInsumoSelecionado" value="#{item}"/>
+
+                            </p:commandButton>
 
                     </p:column>
 
@@ -334,18 +337,19 @@
                 <h:panelGrid columns="3">
 
 
-                    <p:commandButton icon="ui-icon-plus" actionListener="#{MBRequisicao.adicionarItemInsumo(insumo)}"
+                    <p:commandButton icon="ui-icon-plus" actionListener="#{MBRequisicao.adicionarItemInsumo}"
                                      
                                       update=":formDlgNovo:tabelaItemInsumo :msgGlobal" >
 
                         <f:attribute name="insumoItemSelecionado" value="#{item}"/>
 
                     <f:ajax render="@form" execute="@form" />
+                    
 
                     </p:commandButton>
 
                     <p:commandButton value="Sair"
-                                     onclick="PF('dlgInsumo').hide();" />
+                                     onclick="PF('dlgInsumo').hide();"/>
                 </h:panelGrid>
 
             </h:form>
@@ -388,7 +392,7 @@
 
 
                     <p:commandButton value="Sair"
-                                     onclick="PF('dlgItensInsumo').hide();" />
+                                     onclick="PF('dlgItensInsumo').hide();"/>
 
                 </h:panelGrid>
 
