Atualização Adicionar  lista de produtos

--- a/src/main/webapp/pages/Insumo.xhtml
+++ b/src/main/webapp/pages/Insumo.xhtml
@@ -226,7 +226,7 @@
                         <f:selectItems value="#{MBInsumo.listaUnidade}" 
                                        var="item"
                                        itemValue="#{item.codigo}" 
-                                       itemLabel="#{item.unidade.unidade}" />
+                                       itemLabel="#{item.unidade}" />
 
                     </p:selectOneMenu>
 
