--- a/src/main/webapp/pages/ListaDeCompras.xhtml
+++ b/src/main/webapp/pages/ListaDeCompras.xhtml
@@ -115,7 +115,7 @@
 
                     <p:outputLabel value="Descrição:"/>
 
-                    <p:inputText  onblur="value = value.toUpperCase()"/>
+                    <p:inputText  value="#{MBListaDeCompra.listaDeCompra.descricao}" onblur="value = value.toUpperCase()"/>
 
                     <p:outputLabel value="Setor"/>
 
@@ -237,7 +237,7 @@
 
                     <p:commandButton value="Gravar"
                                      actionListener="#{MBListaDeCompra.salvar}"
-                                     oncomplete="verificar(xhr, status, args, 'dlgNovo', 'tabela');"
+                                     oncomplete="verificar(xhr, status, args, 'dlgNovo', 'tabelaListaDeCompra');"
                                      update=":formTabela:tabela :msgGlobal" />
 
                     <p:commandButton value="Cancelar" onclick="PF('dlgNovo').hide();"
@@ -639,7 +639,6 @@
                          width="400"
                          >
 
-
                 <h:form id="formMarca">
 
                     <p:dataTable id="tabelaMarca"
@@ -717,7 +716,7 @@
                     <h:panelGrid columns="2">
 
                         <p:commandButton value="Ok"
-                                         actionListener="#{MBListaDeCompra.salvarItemMarca()}"
+                                         
                                          onclick="PF('dlgMarca').hide();"
                                          update=":msgGlobal"
                                          />
