Atualização Adicionar  lista de produtos correção salvar item marca

--- a/src/main/webapp/pages/ListaDeCompras.xhtml
+++ b/src/main/webapp/pages/ListaDeCompras.xhtml
@@ -90,7 +90,7 @@
                     <p:commandButton value="Novo" 
                                      oncomplete="PF('dlgNovo').show()"
                                      actionListener="#{MBListaDeCompra.prepararSalvar}"
-                                     update=":formDlgNovo:painelDlgNovo" />
+                                     update=":formDlgNovo:painelDlgNovo :formDlgNovo:tabelaItemInsumo :formFornecedor:tabelaItemFornecedor" />
                 </f:facet>
 
             </p:dataTable>
